slurm-28389.out
Traceback (most recent call last):
  File "main_timegan.py", line 38, in <module>
    from timegan import timegan
  File "/scratch/lustre/home/dopu7482/TimeGAN/timegan.py", line 324
    Z_mb = random_generator(no, z_dim, ori_time, max_seq_len)s
                                                             ^
SyntaxError: invalid syntax
